--- a/Demo906.html
+++ b/Demo906.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>一款震撼的图片展示的效果-jQuery插件库  </title>
+    <title>一款有趣的图片展示的效果-jQuery插件库  </title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1,user-scalable=no" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
